--- a/Assets/RuntimeTests/RuntimeTests.asmdef
+++ b/Assets/RuntimeTests/RuntimeTests.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "GameClient"
+        "GameClient",
+        "Unity.Cinemachine"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
